feat: 프로젝트 정리 및 문서 최신화
- Ollama 통합 (LLaMA provider 개선)
- HTTP transport 기반 MCP 서버 설정 (stdio -> http)
- 환경 설정 자동화 스크립트 (setup_env.py)
- Gmail OAuth 자동화 (create_gmail_token.py)
- extract tool 버그 수정 (channel Optional, query Dict)
- LLM provider singleton 패턴 적용 (메모리 최적화)
- 문서 구조 개선:
  - docs/CLIENT_SETUP_GUIDE.md (Claude Desktop, Cursor HTTP 설정)
  - docs/ENVIRONMENT_SETUP.md (환경 변수 상세 가이드)
- 개인정보 보호 강화 (.gitignore 업데이트)
- 불필요한 파일 정리 (개발 문서 아카이브)

--- a/projects/ai-agent-orchestrator-team/.gitignore
+++ b/projects/ai-agent-orchestrator-team/.gitignore
@@ -69,6 +69,12 @@ logs/
 .env.local
 .env.production
 
+# Personal credentials and tokens
+client_secret*.json
+*credentials.json
+*token.json
+gcp-oauth.keys.json
+
 # Node modules (if any)
 node_modules/
 
