--- a/projects/ai-agent-orchestrator-team/pyproject.toml
+++ b/projects/ai-agent-orchestrator-team/pyproject.toml
@@ -38,11 +38,14 @@ dependencies = [
     "apscheduler>=3.10.0",
     "pytz>=2023.3",
     "html2image>=2.0.7",
-    "openai>=2.0.0",
+    "openai>=1.10.0",
     "torch>=2.8.0",
     "transformers>=4.56.2",
     "accelerate>=1.10.1",
     "huggingface-hub>=0.35.3",
+    "google-auth-oauthlib>=1.2.2",
+    "google-auth-httplib2>=0.2.0",
+    "google-api-python-client>=2.184.0",
 ]
 
 [project.optional-dependencies]
